--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: uuid_type
 description: 'RFC4122 UUID type, parser and generators. Supported versions are: v1, v4, v5'
-version: 0.5.0
+version: 0.5.1
 author: DeNix <denixport@gmail.com>
 
 environment:
@@ -9,4 +9,4 @@ dependencies:
   crypto: '>=0.9.2 <3.0.0'
 dev_dependencies:
   test: '^0.12.0'
-  benchmark_harness: any
+#  benchmark_harness: any
