--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.5.1-dev
 author: DeNix <denixport@gmail.com>
 homepage: https://github.com/denixport/dart-uuid
 environment:
-  sdk: '>=2.0.0-dev.50.0 <2.0.0'
+  sdk: '>=1.24.0 <2.0.0'
 dependencies:
   crypto: '>=0.9.2 <3.0.0'
 dev_dependencies:
