--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: uuid_type
 description: 'UUID type, parser and generators. Supported versions are: v1, v4, v5'
 version: 0.6.0-dev
 author: Denis Portnov <denixport@gmail.com>
+uploader: Denis Portnov <denixport@gmail.com>
 homepage: https://github.com/denixport/dart-uuid
 environment:
   sdk: '>=2.0.0-dev.50.0 <2.0.0'
