--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dart:
 dart_task:
   - test: --platform vm
   - test: --platform firefox -j 1
-  - dartanalyzer: --fatal-warnings lib
+  - dartanalyzer: --fatal-warnings --fatal-lints lib
 branches:
   only: [master]
 cache:
