--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: uuid_type
 description: 'UUID type, parser and generators. Can generate v1, v4, and v5 UUIDs'
-version: 1.0.2-beta
+version: 1.0.2
 author: Denis Portnov <denixport@gmail.com>
 uploader: Denis Portnov <denixport@gmail.com>
 homepage: https://github.com/denixport/dart-uuid
@@ -11,4 +11,4 @@ dependencies:
 dev_dependencies:
   pedantic: '>=1.0.0'
   test: '^1.3.0'
-
+  
