--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,3 @@
-include: package:pedantic/analysis_options.yaml
-
 analyzer:
   strong-mode:
     implicit-casts: false
@@ -8,7 +6,6 @@ analyzer:
     dead_code: error
     missing_required_param: warning
     missing_return: warning
-    override_on_non_overriding_method: warning
     todo: info
     unused_element: error
     unused_import: warning
@@ -17,14 +14,25 @@ analyzer:
 linter:
   rules:
     - always_declare_return_types
+    - always_require_non_null_named_parameters
+    - annotate_overrides
+    - avoid_empty_else
+    - avoid_init_to_null
     - avoid_null_checks_in_equality_operators
+    - avoid_relative_lib_imports
+    - avoid_return_types_on_setters
+    - avoid_shadowing_type_parameters
+    - avoid_types_as_parameter_names
     - await_only_futures
+    - camel_case_extensions
     - camel_case_types
     - cancel_subscriptions
     - comment_references
     - control_flow_in_finally
+    - curly_braces_in_flow_control_structures
     - directives_ordering
     - empty_catches
+    - empty_constructor_bodies
     - empty_statements
     - hash_and_equals
     - implementation_imports
@@ -32,13 +40,37 @@ linter:
     - library_names
     - library_prefixes
     - list_remove_unrelated_type
+    - no_duplicate_case_values
     - non_constant_identifier_names
+    - null_closures
     - overridden_fields
     - package_api_docs
+    - prefer_adjacent_string_concatenation
     - prefer_collection_literals
+    - prefer_conditional_assignment
+    - prefer_contains
+    - prefer_equal_for_default_values
     - prefer_final_fields
+    - prefer_for_elements_to_map_fromIterable
+    - prefer_generic_function_type_aliases
+    - prefer_if_null_operators
+    - prefer_is_empty
+    - prefer_is_not_empty
+    - prefer_iterable_whereType
+    - prefer_spread_collections
     - public_member_api_docs
+    - recursive_getters
+    - slash_for_doc_comments
     - test_types_in_equals
     - throw_in_finally
     - type_init_formals
+    - unawaited_futures
+    - unnecessary_const
+    - unnecessary_new
+    - unnecessary_null_in_if_null_operators
+    - unnecessary_this
     - unrelated_type_equality_checks
+    - use_function_type_syntax 	
+    - use_function_type_syntax_for_parameters
+    - use_rethrow_when_possible
+    - valid_regexps
