--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dart:
   - dev
 dart_task:
   - test: --platform vm
-  - test: --platform firefox -j 1
+  - test: --platform chrome
   - dartanalyzer: --fatal-warnings --fatal-lints lib
 branches:
   only: [master]
